--- a/css/layout.less
+++ b/css/layout.less
@@ -631,9 +631,10 @@ main .wrap_math * {
 
 /* figure block */
 main figure {
-	background-color:	@ini_background_alt;
-	border:				@ini_border solid 1px;
-	padding:			.5em;
+	background-color: @ini_background_alt;
+	border: @ini_border solid 1px;
+	padding: .5em;
+	overflow: hidden;
 }
 main figure figcaption {
 	margin-top: .5em;
